--- a/templates/search.html
+++ b/templates/search.html
@@ -43,7 +43,7 @@
 
     <div class="container" >
           {% for obj in word_list %}
-          <h1>{{ forloop.counter }}: {{ obj.word }} -->{{obj.frequency}}</h1>
+          <h1>{{ forloop.counter }}: {{ obj.fields }}</h1>
           <br/>
           {% endfor %}
   </div>
